--- a/data/index.html
+++ b/data/index.html
@@ -7,5 +7,11 @@
 	</head>
 	<body>
 		<h1>Hello from index.html !</h1>
+		<style>
+		h1 {
+			color: green 
+			text-align center
+		}
+		</style>
 	</body>
 </html>
