--- a/data/not-found.html
+++ b/data/not-found.html
@@ -6,10 +6,10 @@
     <title></title>
   </head>
   <body>
-    <h1>Hello from MAAIN !</h1>
+    <h1>Error ! requested pages dosen't exist :(</h1>
     <style>
       h1 {
-        color: green text-align center;
+			color: green text-align center;
       }
     </style>
   </body>
