--- a/data/index.html
+++ b/data/index.html
@@ -1,17 +1,17 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title></title>
-	</head>
-	<body>
-		<h1>Hello from index.html !</h1>
-		<style>
-		h1 {
-			color: green 
-			text-align center
-		}
-		</style>
-	</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title></title>
+  </head>
+  <body>
+    <h1>Hello from index.html !</h1>
+    <style>
+      h1 {
+      	color: green;
+      	text-align; center
+      }
+    </style>
+  </body>
 </html>
