--- a/data/not-found.html
+++ b/data/not-found.html
@@ -9,7 +9,8 @@
     <h1>Error ! requested pages dosen't exist :(</h1>
     <style>
       h1 {
-			color: green text-align center;
+        color: red;
+        text-align: center;
       }
     </style>
   </body>
