--- a/data/index.html
+++ b/data/index.html
@@ -7,6 +7,9 @@
   </head>
   <body>
     <h1>Hello from index.html !</h1>
+		<h1>Dynamically changing the content</h1>
+		<h1>New updates here</h1>
+		<a href="../main.html">click me</a>
     <style>
       h1 {
       	color: green;
