--- a/data/index.html
+++ b/data/index.html
@@ -6,15 +6,8 @@
     <title></title>
   </head>
   <body>
-    <h1>Hello from index.html !</h1>
-		<h1>Dynamically changing the content</h1>
-		<h1>New updates here</h1>
-		<a href="../main.html">click me</a>
-    <style>
-      h1 {
-      	color: green;
-      	text-align; center
-      }
-    </style>
+    <h1>index.html !</h1>
+    <a href="../main.html">main.html page</a>
+    <style></style>
   </body>
 </html>
