Data pages changes

--- a/data/index.html
+++ b/data/index.html
@@ -7,7 +7,9 @@
   </head>
   <body>
     <h1>index.html !</h1>
-    <a href="../main.html">main.html page</a>
+    <h2>Other pages:</h2>
+    <br />
+    <a href="../main.html">main.html</a>
     <style></style>
   </body>
 </html>
