--- a/data/main.html
+++ b/data/main.html
@@ -6,7 +6,7 @@
     <title></title>
   </head>
   <body>
-    <h1>Hello from MAAIN !</h1>
+		<h1>Main page</h1>
     <style>
       h1 {
         color: green text-align center;
